backport: re PR fortran/21034 ([4.0 only] internal compiler error: in gfc_trans_auto_array_allocation, at fortran/trans-array.c:3036)

2005-07-15 Paul Brook  <paul@codesourcery.com>

	Backport form mainline.
	2005-06-22 Paul Brook  <paul@codesourcery.com>
	PR fortran/21034
	* symbol.c (gfc_is_var_automatic): New function.
	(save_symbol): Use it.
testsuite/
	* gfortran.dg/auto_save_1.f90: New test.

From-SVN: r102055